edit all half spaces and \\

--- a/h2wp.tex
+++ b/h2wp.tex
@@ -53,24 +53,30 @@
 
 سه مهره رخ متمایز و صفحه شطرنجی $8\times8$ داریم. به چند روش می‌توان این سه مهره را در سه خانه از این صفحه قرار داد به طوری که حداقل یک مهره وجود داشته باشد که توسط هیچ مهره‌ای تهدید نمی‌شود؟
 \solution
-  سوال را با اصل متمم حل می‌کنیم:\\
-      -  کل حالات:\\
+  سوال را با اصل متمم حل می‌کنیم:
+  
+      -  کل حالات:
+      
         \[64\times63\times62\]
-      -  حالات نامطلوب: حالاتی که همه رخ‌ها تهدید بشوند.\\
-         رخ اول برای قرار گیری در صفحه شطرنجی 64 حالت دارد, حال چون رخ اول باید تهدید بشود رخ دوم را باید در سطر یا ستون رخ اول قرار بدهیم که ۱۴ حالت دارد. چون رخ سوم هم باید تهدید بشود باید در سطر یا ستون یکی از رخ ها باشد که در مجموع شامل ۶ خانه در سطر یا ستون مشترک دو رخ قبلی و ۱۴ خانه در سطرها یا ستون های غیر مشترک دو رخ است. پس کل حالت ها برابر است با:\\
+      -  حالات نامطلوب: حالاتی که همه رخ‌ها تهدید بشوند.
+      
+         رخ اول برای قرار گیری در صفحه شطرنجی 64 حالت دارد, حال چون رخ اول باید تهدید بشود رخ دوم را باید در سطر یا ستون رخ اول قرار بدهیم که ۱۴ حالت دارد. چون رخ سوم هم باید تهدید بشود باید در سطر یا ستون یکی از رخ‌ها باشد که در مجموع شامل ۶ خانه در سطر یا ستون مشترک دو رخ قبلی و ۱۴ خانه در سطرها یا ستون‌های غیر مشترک دو رخ است. پس کل حالت‌ها برابر است با:
+         
          \[64\times14\times20\]
 -         حالات مطلوب: طبق اصل متمم برابر است با:
          \[64\times63\times62 - 64\times14\times20\]
 \notes
 \Tnote{n1}
-نشمردن همه حالت ها: در اینجا تمام حالات نامطلوب محاسبه نشده است, زیرا این امکان وجود دارد که رخ اول توسط رخ دوم تهدید نشود و این حالت در نظر گرفته نشده است.
+نشمردن همه حالت‌ها: در اینجا تمام حالات نامطلوب محاسبه نشده است, زیرا این امکان وجود دارد که رخ اول توسط رخ دوم تهدید نشود و این حالت در نظر گرفته نشده است.
 \Nnote{n2}
-بهتر بود اشاره شود که  به دلیل تمایز رخ ها چنین نتیجه ای گرفته شده است.
+بهتر بود اشاره شود که به دلیل تمایز رخ‌ها چنین نتیجه‌ای گرفته شده است.
 
 \solution
-     -  کل حالات:\\
+     -  کل حالات:
+     
         \[64\times63\times62\]
-      -  حالات نامطلوب: حالاتی که همه رخ ها تهدید بشوند.\\
+      -  حالات نامطلوب: حالاتی که همه رخ‌ها تهدید بشوند.
+      
          \[64\times7\times20\times2\]
 -         حالات مطلوب: طبق اصل متمم برابر است با:
          \[64\times63\times62 - 64\times14\times20\]
@@ -79,18 +85,24 @@
 نبود توضیحات کافی برای عبارت: به دلیل نبود توضیحات کافی, تشخیص چرایی غلط بودن جواب نهایی ممکن نیست.
 \solution*{پاسخ صحیح}
 
-   -  کل حالات: به دلیل تمایز رخ ها برابر است با:\\
+   -  کل حالات: به دلیل تمایز رخ‌ها برابر است با:
+   
         \[ P(64,3) = 64\times63\times62\]
-      -  حالات نامطلوب: حالاتی که همه رخ ها تهدید بشوند.\\
+      -  حالات نامطلوب: حالاتی که همه رخ‌ها تهدید بشوند.
+      
       دو حالت داریم:
       \begin{enumerate}
 \item
-رخ اول رخ دوم را تهدید کند:\\
-         رخ اول برای قرار گیری در صفحه شطرنجی 64 حالت دارد, حال چون رخ اول باید توسط رخ دوم تهدید بشود رخ دوم را باید در سطر یا ستون رخ اول قرار بدهیم که ۱۴ حالت دارد. چون رخ سوم هم باید تهدید بشود باید در سطر یا ستون یکی از رخ ها باشد که در مجموع شامل ۶ خانه در سطر یا ستون مشترک دو رخ قبلی و ۱۴ خانه در سطرها یا ستون های غیر مشترک دو رخ است. پس کل حالت ها برابر است با:\\
+رخ اول رخ دوم را تهدید کند:
+
+         رخ اول برای قرار گیری در صفحه شطرنجی 64 حالت دارد, حال چون رخ اول باید توسط رخ دوم تهدید بشود رخ دوم را باید در سطر یا ستون رخ اول قرار بدهیم که ۱۴ حالت دارد. چون رخ سوم هم باید تهدید بشود باید در سطر یا ستون یکی از رخ ها باشد که در مجموع شامل ۶ خانه در سطر یا ستون مشترک دو رخ قبلی و ۱۴ خانه در سطرها یا ستون‌های غیر مشترک دو رخ است. پس کل حالت‌ها برابر است با:
+         
          \[64\times14\times20\]
 \item
-رخ اول رخ دوم را تهدید نکند:\\
-         رخ اول برای قرار گیری در صفحه شطرنجی 64 حالت دارد, حال چون رخ اول نباید توسط رخ دوم تهدید بشود رخ دوم را در خانه ای به جز سطر یا ستون رخ اول قرار بدهیم که ۴۹ حالت دارد. حال رخ سوم باید هر دو رخ را تهدید کند پس باید در یکی از محل های تقاطع سطر و ستون رخ اول و رخ دوم قرار بگیرد که دو حالت دارد, پس کل حالت ها برابر است با:\\
+رخ اول رخ دوم را تهدید نکند:
+
+         رخ اول برای قرار گیری در صفحه شطرنجی 64 حالت دارد, حال چون رخ اول نباید توسط رخ دوم تهدید بشود رخ دوم را در خانه‌ای به جز سطر یا ستون رخ اول قرار بدهیم که ۴۹ حالت دارد. حال رخ سوم باید هر دو رخ را تهدید کند پس باید در یکی از محل‌های تقاطع سطر و ستون رخ اول و رخ دوم قرار بگیرد که دو حالت دارد, پس کل حالت‌ها برابر است با:
+         
          \[64\times49\times2\]
          
       \end{enumerate}
@@ -100,10 +112,14 @@
 %% question 2
        
 \question
-  اتحاد زیر را ثابت کنید.\\ \\
-     \centerline{$1^2 {n \choose 1} + 2^2 {n \choose 2} + 3^2 {n \choose 3} + ... + n^2 {n \choose n} = n(n+1)2^{n-2}$}\\ \\
+
+
+  اتحاد زیر را ثابت کنید.
+  
+     $$1^2 {n \choose 1} + 2^2 {n \choose 2} + 3^2 {n \choose 3} + ... + n^2 {n \choose n} = n(n+1)2^{n-2}$$
+     
 \solution
-   فرض کنید $ P = \displaystyle\sum_{k=0}^{n} {{k^2}\binom{n}{k}}$ بیانگر تعداد راه های انتخاب یک کمیته از بین $n$ کاندیدا است به طوری که یک فرد یا دو فرد متمایز، رئیس کمیته باشند.  حال این شمارش را به روش دیگری انجام می دهیم.
+   فرض کنید $ P = \displaystyle\sum_{k=0}^{n} {{k^2}\binom{n}{k}}$ بیانگر تعداد راه‌های انتخاب یک کمیته از بین $n$ کاندیدا است به طوری که یک فرد یا دو فرد متمایز، رئیس کمیته باشند. حال این شمارش را به روش دیگری انجام می‌دهیم.
     \begin{enumerate}
         \item 
         با فرض داشتن یک رئیس، رئیس را انتخاب کرده و تصمیم می‌گیریم که بقیه افراد حضور داشته باشند یا خیر و حالات به دست آمده را جمع می‌کنیم با حالاتی که 2 رئیس را انتخاب کردیم در مورد حضور یا عدم حضور بقیه افراد تصمیم گرفتیم:
@@ -111,7 +127,8 @@
     \end{enumerate}
     از تساوی این ۲ حالت حکم مساله اثبات می‌شود:
     \[\displaystyle\sum_{k=0}^{n} {{k^2}\binom{n}{k}} = n\times(n+1)\times{2^{n-2}}\]
-    \\ 
+    
+     
 \notes
 \Enote{n4}
 عدم تطابق توضیحات با فرمول نوشته شده, انتخاب دو رئیس از میان $n$ نفر $\binom{n}{2}$ حالت دارد نه $n\times(n-1)$. 
@@ -121,8 +138,9 @@
 یک طرف دوگانه شماری که نیازمند اثبات است, بدیهی در نظر گرفته شده است.
 \solution*{پاسخ صحیح}
 
-سوال را با دوگانه شماری حل می کنیم:\\
-   فرض کنید $ P$ بیانگر تعداد راه های انتخاب یک کمیته از بین $n$ کاندیدا است به طوری که یک فرد رئیس کمیته و یک نفر معاون باشند و رئیس و معاون می توانند یک نفر باشند. شمارش این راه ها به 2 روش امکان پذیر است.
+سوال را با دوگانه شماری حل می‌کنیم:
+
+   فرض کنید $ P$ بیانگر تعداد راه‌های انتخاب یک کمیته از بین $n$ کاندیدا است به طوری که یک فرد رئیس کمیته و یک نفر معاون باشند و رئیس و معاون می‌توانند یک نفر باشند. شمارش این راه‌ها به 2 روش امکان پذیر است.
     \begin{enumerate}
         \item 
         با فرض یکسان بودن رئیس و معاون، رئیس را انتخاب کرده و تصمیم می‌گیریم که بقیه افراد حضور داشته باشند یا خیر و حالات به دست آمده را جمع می‌کنیم با حالاتی که رئیس و معاون متمایز را انتخاب کردیم و در مورد حضور یا عدم حضور بقیه افراد تصمیم گرفتیم:
@@ -133,17 +151,20 @@
     \end{enumerate}
     از تساوی 2 حالت فوق حکم مساله اثبات می‌شود:
     \[\displaystyle\sum_{k=0}^{n} {{k^2}\binom{n}{k}} = n\times(n+1)\times{2^{n-2}}\]
-    \\ \\
+   
+   
     
 %% question 3
 
 \question
-۶۰ دانشجو در کلاس ریاضیات گسسته حضور دارند.در میان هر ۱۰ نفر از این کلاس , حداقل ۳ نفر نمره مبانی یکسانی دارند. ثابت کنید در این کلاس ۱۵ نفر وجود دارند که نمره مبانی آن ها یکسان است.
+
+
+۶۰ دانشجو در کلاس ریاضیات گسسته حضور دارند.در میان هر ۱۰ نفر از این کلاس , حداقل ۳ نفر نمره مبانی یکسانی دارند. ثابت کنید در این کلاس ۱۵ نفر وجود دارند که نمره مبانی آن‌ها یکسان است.
 
 \solution
 
-در نظر میگیریم حداکثر تعداد تکرار از یک نمره ۱۴ عدد است که در این صورت حداقل به ۵ نمره متفاوت نیاز است . 
-در این صورت باز میتوان گروه ۱۰ تایی را از دانش آموزان انتخاب کرد که حداکثر دو نفر نمره یکسان داشته باشند . پس فرض اولیه غلط بوده و مشخص میشود که لااقل از یکی از نمرات وجود دارد که ۱۵ دانش آموز یا بیشتر 
+در نظر می‌گیریم حداکثر تعداد تکرار از یک نمره ۱۴ عدد است که در این صورت حداقل به ۵ نمره متفاوت نیاز است . 
+در این صورت باز می‌توان گروه ۱۰ تایی را از دانش آموزان انتخاب کرد که حداکثر دو نفر نمره یکسان داشته باشند. پس فرض اولیه غلط بوده و مشخص می‌شود که لااقل از یکی از نمرات وجود دارد که ۱۵ دانش آموز یا بیشتر 
 آن نمره را دارند.
  
 
@@ -155,11 +176,11 @@
 
 
 \Nnote{n8}
-باید اصل لانه   کبوتری که از آن استفاده کرده است را نام میبرد و نحوه استفاده از آن مشخص شود.
+باید اصل لانه کبوتری که از آن استفاده کرده است را نام می‌برد و نحوه استفاده از آن مشخص شود.
 
 
 \Tnote{n9}
-پاسخ کامل نیست. پاسخ درست و کامل در پایین آمده است.
+پاسخ کامل نیست. پاسخ درست و کامل در پایین آمده‌است.
 
 
 
@@ -208,13 +229,15 @@ $\frac{60}{14}$
 %% question 4
 
 \question
+
+
 ضریب عبارت $ x ^ {12}$
 در بسط عبارت
 $(1-4x)^{-5}$
 را بیابید.
 
 \solution
-طبق بسط دوجمله ای داریم:    
+طبق بسط دوجمله‌ای داریم:    
     \begin{align*}
     \frac{1}{(1-4x)^5}=\sum\limits_{k=0}^{\infty} \binom{k+4}{k}  4 ^ k  x^ k              
     \end{align*}
@@ -235,7 +258,7 @@ $(1-4x)^{-5}$
 \notes
 
 \Nnote{n10}
-بهتر است اصل بسط دوجمله ای هم نوشته شود.
+بهتر است اصل بسط دوجمله‌ای هم نوشته شود.
 
 \Enote{n11}
 قبل از استفاده از متغیر باید آن را تعریف کرد. تعریف دنباله $a_n$ ضروری است. 
@@ -257,53 +280,67 @@ $$\binom{16}{12} (4)^{12}$$
 %% question 5
 
 \question
-چند عدد طبیعی حداکثر ۹ رقمی وجود دارد که مجموع ارقام آن برابر با ۳۲ باشد؟\\ \\
+
+
+چند عدد طبیعی حداکثر ۹ رقمی وجود دارد که مجموع ارقام آن برابر با ۳۲ باشد؟
+
 \solution
-  سوال را با اصل شمول و عدم شمول حل می کنیم: 
+
+
+  سوال را با اصل شمول و عدم شمول حل می‌کنیم: 
    %\[|A_1\cup A_2\cup A_3\cup A_4\cup A_5\cup A_6\cup A_7\cup A_8\cup A_9|=|A_1|+|A_1\cup A_2|+|A_1\cup A_2\cup A_3|+|A_1\cup A_2\cup A_3\cup A_4|\]
    
     \[|A_1\cup A_2\cup... \cup A_9|=\binom{9}{1}|A_1|+\binom{9}{2}|A_1\cap A_2|+...+\binom{9}{9}|A_1\cap A_2\cap...\cap A_9|\]\\
-    حال مقدار عبارت ها را حساب می کنیم:\\
+    حال مقدار عبارت‌ها را حساب می‌کنیم:
+    
     \[|A_1|=\binom{30}{8}\]
     \[|A_1\cap A_2|=\binom{20}{8}\]
     \[|A_1\cap A_2\cap A_3|=\binom{10}{8}\]
-    برای بقیه جمله ها جواب برابر ۰ است.\\
-    حال از اصل متمم برای به دست آوردن جواب نهایی استفاده می کنیم:\\
+    برای بقیه جمله‌ها جواب برابر ۰ است.
+    
+    حال از اصل متمم برای به دست آوردن جواب نهایی استفاده می‌کنیم:
+    
         -کل حالات:
-     \[\binom{40}{8}\]\\
-     - حالات مطلوب:
+     \[\binom{40}{8}\]
+          - حالات مطلوب:
      \[\binom{40}{8}- \binom{9}{1}\binom{30}{8}+\binom{9}{2}\binom{20}{8}-\binom{9}{3}\binom{10}{8}\]
      
 \notes
 \Enote{n12}
-تعریف متغیر های $A_i$ ضروری است, چون در غیر این صورت منظور از بقیه استدلال ها به هیج وجه مشخض نیست.
+تعریف متغیر‌های $A_i$ ضروری است, چون در غیر این صورت منظور از بقیه استدلال‌ها به هیج وجه مشخض نیست.
 \Enote{n13}
-اثبات و یا در صورت وضوح, اشاره به تقارن میان مجموعه ها برای استفاده از اصل شمول و عدم شمول به این شکل ضروری است.
+اثبات و یا در صورت وضوح, اشاره به تقارن میان مجموعه‌ها برای استفاده از اصل شمول و عدم شمول به این شکل ضروری است.
 \solution*{پاسخ صحیح}
 
-رقم $i$ ام این عدد را با $x_i$ نشان می دهیم, بنابراین به دنبال یافتن تعداد جواب های صحیح معادله زیر هستیم:
+رقم $i$ ام این عدد را با $x_i$ نشان می‌دهیم, بنابراین به دنبال یافتن تعداد جواب‌های صحیح معادله زیر هستیم:
     \[\sum\limits_1^9 x_i=32\]
     \[\forall i \in [1,9] : x_i\leq 9\]
     %$\sum\limits_1^9 x_i=32$
     %$\exists i \in [1,9] ,i \in N : x_i\geq 10$
-  تعداد جواب های صحیح این معادله را به کمک اصل متمم پیدا می کنیم:\\
-     -کل حالات:تعداد جواب های صحیح نامنفی معادله  $\sum\limits_1^9 x_i=32 $ .این یک معادله سیاله است و تعداد جواب های صحیح آن برابر است با:
+  تعداد جواب‌های صحیح این معادله را به کمک اصل متمم پیدا می‌کنیم:
+  
+     -کل حالات:تعداد جواب‌های صحیح نامنفی معادله  $\sum\limits_1^9 x_i=32 $ .این یک معادله سیاله است و تعداد جواب‌های صحیح آن برابر است با:
      
-     \[\binom{40}{8}\]\\
-    -حالات نامطلوب:تعداد جواب های صحیح نامنفی معادله $\sum\limits_1^9 x_i=32$  
+     \[\binom{40}{8}\]
+     
+    -حالات نامطلوب:تعداد جواب‌های صحیح نامنفی معادله $\sum\limits_1^9 x_i=32$  
      به طوری که:
-     $\exists i \in [1,9] : x_i\geq 10$\\
-     حال اگر مجموعه حالت هایی که در آن $x_i\geq 10 $ است را با $A_i$نشان دهیم, کافی است تعداد اعضای اجتماع این مجموعه ها را بیابیم\\ 
+     $\exists i \in [1,9] : x_i\geq 10$
+     
+     حال اگر مجموعه حالت‌هایی که در آن $x_i\geq 10 $ است را با $A_i$نشان دهیم, کافی است تعداد اعضای اجتماع این مجموعه‌ها را بیابیم.
+      
      طبق اصل شمول و عدم شمول و با توجه به تقارن میان $A_i$ ها داریم: 
      \[|A_1\cup A_2\cup... \cup A_9|=\binom{9}{1}|A_1|+\binom{9}{2}|A_1\cap A_2|+...+\binom{9}{9}|A_1\cap A_2\cap...\cap A_9|\]
    % \[|\bigcup\limits^9_{i=1}A_i|=\sum_{k=1}^{9}(-1)^{k+1}\binom{9}{k}|\bigcap\limits^k_{i=1}A_i|\]\\%
-   برای محاسبه مقدار عبارت ها, در معادله سیاله متناظر, در صورتی که $x_i\geq 10$ بود قرار می دهیم $x_i=y_i+10 $ و در غیر این صورت قرار می دهیم $x_i=y_i$, حال اگر تعداد $i$ هایی را که به ازای آن ها $x_i\geq 10 $ است را با $k$ نشان بدهیم, حال به دنبال تعداد جواب های صحیح نامنفی معادله سیاله $\sum\limits_1^9 y_i=32-10k $ هستیم, که برابر است با: 
+   برای محاسبه مقدار عبارت‌ها, در معادله سیاله متناظر, در صورتی که $x_i\geq 10$ بود قرار می‌دهیم $x_i=y_i+10 $ و در غیر این صورت قرار میدهیم $x_i=y_i$, حال اگر تعداد $i$ هایی را که به ازای آن‌ها $x_i\geq 10 $ است را با $k$ نشان بدهیم, حال به دنبال تعداد جواب های صحیح نامنفی معادله سیاله $\sum\limits_1^9 y_i=32-10k $ هستیم, که برابر است با: 
    \[\binom{40-10k}{8}\] 
-    حال مقدار عبارت ها را حساب می کنیم:\\
+    حال مقدار عبارت‌ها را حساب می‌کنیم:
+    
     \[|A_1|=\binom{30}{8}\hspace{2cm} (k=1)\]
     \[|A_1\cap A_2|=\binom{20}{8}\hspace{2cm} (k=2)\]
     \[|A_1\cap A_2\cap A_3|=\binom{10}{8}\hspace{2cm} (k=3)\]
-    برای بقیه جمله ها جواب برابر ۰ است.\\
+    برای بقیه جمله‌ها جواب برابر ۰ است.
+    
     پس کل حالات نامطلوب برابر است با:
     \[\binom{9}{1}\binom{30}{8}-\binom{9}{2}\binom{20}{8}+\binom{9}{3}\binom{10}{8}\]
      - حالات مطلوب: طبق اصل متمم برابر است با:
@@ -313,18 +350,20 @@ $$\binom{16}{12} (4)^{12}$$
 %% question 6
 
 \question 
-   با استفاده از توابع مولد نشان دهید تعداد روش های انتخاب ۴ عضو دو به دو  نامتوالی از مجموعه اعداد n
+
+
+   با استفاده از توابع مولد نشان دهید تعداد روش‌های انتخاب ۴ عضو دو به دو  نامتوالی از مجموعه اعداد n
 			 ,...,1,2,3
 			 برابر با 
 			 انتخاب 4 از n-3 است.
 			 
 \solution
-یک زیرمجموعه از این نوع مثلا {۱و۳و۷و۱۰} را انتخاب و نابرابری های اکید 
+یک زیرمجموعه از این نوع مثلا {۱و۳و۷و۱۰} را انتخاب و نابرابری‌های اکید 
     $ \\ 0 < 1 < 3 < 7 < 10 < n+1 \\ $ 
-   را در نظر میگیریم. و بررسی میکنیم چند عدد صحیح بین هر دو عدد متوالی از این اعداد وجود دارند. در اینجا ۰ و ۱ و۳ و
+   را در نظر می‌گیریم. و بررسی می‌کنیم چند عدد صحیح بین هر دو عدد متوالی از این اعداد وجود دارند. در اینجا ۰ و ۱ و۳ و
    \lr{2}
     و n-۱۰ 
-   را به دست می آوریم: ۰ زیرا عددی صحیح بین
+   را به دست می‌آوریم: ۰ زیرا عددی صحیح بین
     \lr{0}
    و ۱ وجود ندارد و ۱ زیرا تنها عدد ۲ بین ۱ و۳ وجود دارد و
    \lr{3} 
@@ -342,25 +381,26 @@ $$\binom{16}{12} (4)^{12}$$
       
       به دنبال ضریب
       $ x ^ {n-4 } $
-      میگشتیم پس 
+      می‌گشتیم پس 
       $ k = n-4 $
       و جواب نهایی برابر است با
-      \lr{$\binom{n-3}{n-7} = \binom{n-3}{4}$} \\ \\ \\ 
+      \lr{$\binom{n-3}{n-7} = \binom{n-3}{4}$} 
+      
   
  
       
 \notes
 
 \Enote{n14}
-  مثال زدن باید به صورتی باشد که حذف آن اختلالی در فهم جواب ایجاد نکند . در اینجا اگر مثال پاراگراف اول را حذف کنیم مشخص نیست تابع مولد برچه اساسی نوشته شده است. پس باید توضیحی درمورد تابع مولد و جمله ای که به دنبال ضریب آن هستیم بدهیم .
+  مثال زدن باید به صورتی باشد که حذف آن اختلالی در فهم جواب ایجاد نکند . در اینجا اگر مثال پاراگراف اول را حذف کنیم مشخص نیست تابع مولد برچه اساسی نوشته شده است. پس باید توضیحی درمورد تابع مولد و جمله‌ای که به دنبال ضریب آن هستیم بدهیم .
 		
 \Enote{n15}
-     نیاز هست که کاملا گفته شود چه تغییر متغیری انجام میشود . در اینجا تغییر متغیر $ k \rightarrow {k+3} $   را داریم.  همیشه به هنگام تغییر متغیر توجه کنیم ممکن است کران ها تغییر کنند. در اینجا کران پایین از صفر به سه میرود. 
+     نیاز هست که کاملا گفته شود چه تغییر متغیری انجام می‌شود . در اینجا تغییر متغیر $ k \rightarrow {k+3} $   را داریم.  همیشه به هنگام تغییر متغیر توجه کنیم ممکن است کران‌ها تغییر کنند. در اینجا کران پایین از صفر به سه می‌رود. 
 	 صورت اصلاح شده:
 	 $ \sum_{k=3}^{\infty}\binom{k+1}{k-3} x^k $
 	
 \Nnote{n16}		
-	  در طی پاسخ به سوال خوب است دقت کنیم همه ی اعداد را یا فارسی یا انگلیسی 
+	  در طی پاسخ به سوال خوب است دقت کنیم همه‌ی اعداد را یا فارسی یا انگلیسی 
 	  بنویسیم.
 	  
 	  
@@ -369,7 +409,7 @@ $$\binom{16}{12} (4)^{12}$$
    \begin{align*}
    G(x)=(1+x+x^2+...)(x+x^2+x^3+...)^3
    \end{align*}
-   در مجموع n-4 عدد داریم . توان های x باید بین مبدا و مقصد باشند پس باید توانی از x را که کوچک تر یا مساوی n-4 هستند را بیابیم:
+   در مجموع n-4 عدد داریم . توان‌های x باید بین مبدا و مقصد باشند پس باید توانی از x را که کوچک تر یا مساوی n-4 هستند را بیابیم:
    
    \begin{align*}
    G(x)= \frac{x^3}{(1-x)^4} = x^3 (1-x)^{-4} = x^3 \sum_{k=0}^{\infty}\binom{k+3}{3} x^k \\ 
@@ -391,7 +431,7 @@ $$\binom{16}{12} (4)^{12}$$
  \notes
  
  \Enote{n17}
-   به هنگام جایگذاری در فرمول باید جایگذاری ها واضح باشد. در این مثال در فرمول (۱) کران پایین از r هست ولی در قسمتی که از آن استفاده شده کران پایین از ۰ است. همین مطلب گویای آن است که به توضیحات بیشتری نیاز هست. 
+   به هنگام جایگذاری در فرمول باید جایگذاری‌ها واضح باشد. در این مثال در فرمول (۱) کران پایین از r هست ولی در قسمتی که از آن استفاده شده کران پایین از ۰ است. همین مطلب گویای آن است که به توضیحات بیشتری نیاز هست. 
 		
 		عبارت زیر صورت کامل شده این نکته است:
 		\begin{align*}
@@ -418,7 +458,8 @@ $$\binom{16}{12} (4)^{12}$$
                 $$x_1 + x_2 + x_3 + x_4 + x_5 = n - 4$$
                 که برابر است با ضریب
                 $x^{n - 4}$
-                در عبارت:\\
+                در عبارت:
+                
               
                 $$(1 + x + x^2 + ...)(x + x^2 + x^3 + ...)(x + x^2 + x^3 + ...)(x + x^2 + x^3 + ...)(1 + x + x^2 + ...) = \frac{x^3}{(1 - x)^5}$$
                 
@@ -430,7 +471,8 @@ $$\binom{16}{12} (4)^{12}$$
                    طبق جدول  
                   Functions Generating Useful
 		از کتاب Rosen
-		که استاد نیز به آن اشاره کردند داریم:\\
+		که استاد نیز به آن اشاره کردند داریم:
+		
        
 		    $$(1 - x) ^ {-n} = \sum_{k = 0}^{\infty} \binom{n + k - 1}{k} x^{k} $$
 
@@ -440,7 +482,8 @@ $$\binom{16}{12} (4)^{12}$$
                     = \sum_{k = 0}^{\infty} \binom{k + 4}{k}x^k
                     = \sum_{k = 0}^{\infty} \binom{k + 4}{4}x^k$$
              
-                $x^{n - 7}$ به ازای $k = n -7$ ساخته می‌شود. بنابراین جواب برابر است با:\\
+                $x^{n - 7}$ به ازای $k = n -7$ ساخته می‌شود. بنابراین جواب برابر است با:
+                
                
                     $$\binom{n - 3}{4}$$
         
@@ -461,7 +504,7 @@ $$\binom{16}{12} (4)^{12}$$
 
 \notes
 
-\Nnote{n18}  باید فرمول و اتحاد های مورد استفاده و رفرنس معتبر آن ‌ذکر شود . به عنوان رفرنس اسم اتحاد هم کافی است. 
+\Nnote{n18}  باید فرمول و اتحادهای مورد استفاده و رفرنس معتبر آن ‌ذکر شود‌. به عنوان رفرنس اسم اتحاد هم کافی است. 
        	 
  
  
@@ -470,7 +513,7 @@ $$\binom{16}{12} (4)^{12}$$
  طبق اتحاد پاسکال داریم:
 
 $$ \binom{n}{k}+\binom{n}{k+1}=\binom{n+1}{k+1}$$
-پس ظبق این اتحاد می توان نوشت:
+پس ظبق این اتحاد می‌توان نوشت:
 \[\]
 \[\sum_{i=k}^{n} {\binom{i}{k}} =\sum_{i=k}^{n} {\binom{i+1}{k+1}-\binom{i}{k+1}}=\sum_{i=k}^{n} {\binom{i+1}{k+1}}-\sum_{i=k}^{n} {\binom{i}{k+1}}\]\[=\binom{n+1}{k+1}+\sum_{i=k}^{n-1} {\binom{i+1}{k+1}}-(0+\sum_{i=k+1}^{n} {\binom{i}{k+1}})=\binom{n+1}{k+1}+\sum_{i=k}^{n-1} {\binom{i+1}{k+1}}-\sum_{i=k}^{n-1} {\binom{i+1}{k+1}}=\binom{n+1}{k+1}\]
 
@@ -480,14 +523,16 @@ $$ \binom{n}{k}+\binom{n}{k+1}=\binom{n+1}{k+1}$$
 
 
 \question
-گزاره های زیر همگی درست هستند, با در نظر گرفتن آن‌ها, درستی یا نادرستی گزاره های ۱ و ۲ را بررسی کنید.
+
+
+گزاره‌های زیر همگی درست هستند, با در نظر گرفتن آن‌ها, درستی یا نادرستی گزاره های ۱ و ۲ را بررسی کنید.
 \begin{itemize}
-\item اگر کار نداشته باشم یا پولدار باشم, تفریح می کنم.
-\item اگر تفریح بکنم, فیلم می بینم یا بستنی می خورم.
-\item بستنی نمی خورم و می خوابم.
-\item اگر بخوابم, فیلم نمی بینم.
+\item اگر کار نداشته باشم یا پولدار باشم, تفریح می‌کنم.
+\item اگر تفریح بکنم, فیلم می‌بینم یا بستنی می‌خورم.
+\item بستنی نمی‌خورم و می‌خوابم.
+\item اگر بخوابم, فیلم نمی‌بینم.
 \end{itemize}
-گزاره ها:
+گزاره‌ها:
 \begin{enumerate}
 \item من کار دارم.
 \item من پولدار هستم.
@@ -503,10 +548,10 @@ $$ \binom{n}{k}+\binom{n}{k+1}=\binom{n+1}{k+1}$$
 \begin{itemize}
 \item من کار دارم $p= $
 \item من پولدار هستم $q= $ 
-\item من تفریح می کنم $r= $ 
-\item من فیلم می بینم $s= $ 
-\item من بستنی می خورم $t= $ 
-\item من می خوابم $u= $ 
+\item من تفریح می‌کنم $r= $ 
+\item من فیلم می‌بینم $s= $ 
+\item من بستنی می‌خورم $t= $ 
+\item من می‌خوابم $u= $ 
 \end{itemize}
 فرض ها:
 \begin{itemize}
@@ -545,11 +590,14 @@ $$ \binom{n}{k}+\binom{n}{k+1}=\binom{n+1}{k+1}$$
 صفحه‌ای دو بعدی را در نظر بگیرید که از هر دو طرف تا بینهایت ادامه دارد و با دو رنگ آن را رنگ کرده‌ایم (حتما از هر دو رنگ استفاده شده است). آیا دو نقطه به فاصله d (عدد حقیقی) وجود دارد که هم‌رنگ باشند؟
 
 \solution
- درستی نقیض خواسته سوال را اثبات می‌کنیم.\\
-حکم سوال : دو نقطه به فاصله $d$ (عدد حقیقی) وجود دارد که هم‌رنگ باشند.\\
-نقیض حکم سوال : وجود دارد دو نقطه به فاصله $d$ که دو رنگ مختلف باشند.\\
+ درستی نقیض خواسته سوال را اثبات می‌کنیم.
+ 
+حکم سوال : دو نقطه به فاصله $d$ (عدد حقیقی) وجود دارد که هم‌رنگ باشند.
+
+نقیض حکم سوال : وجود دارد دو نقطه به فاصله $d$ که دو رنگ مختلف باشند.
+
 دو نقطه با دو رنگ متفاوت را در نظر می‌گیرم. فاصله این دو نقطه $ kd + r $ است به طوری که $ k $ عدد صحیح نامنفی و $ r < k $  است. 
-اگر k بیشتر مساوی یک باشد از نقطه چپ , به اندازه d سمت راست می‌آییم. این نقطه باید همرنگ باشد و این انتقال را آنقدر ادامه می‌دهیم تا $ k = 0 $ شود. حالا به دو نقطه ای رسیده‌ایم که فاصله‌ای کمتر از d دارند و از دو رنگ متفاوت هستند. 
+اگر k بیشتر مساوی یک باشد از نقطه چپ , به اندازه d سمت راست می‌آییم. این نقطه باید هم‌رنگ باشد و این انتقال را آنقدر ادامه می‌دهیم تا $ k = 0 $ شود. حالا به دو نقطه‌ای رسیده‌ایم که فاصله‌ای کمتر از d دارند و از دو رنگ متفاوت هستند. 
 سپس نقطه سوم به فاصله d از این دو نقطه در نظر می‌گیریم. یک مثلث متساوی الساقین تشکیل می‌شود. بنابراین راس سوم حتما با یکی از دو راس دیگر رنگ متفاوت خواهد داشت. در اینجا ثابت کردیم نقیض حکم سوال درست است پس حکم سوال نادرست می‌باشد. 
 
 
@@ -569,20 +617,27 @@ $$ \binom{n}{k}+\binom{n}{k+1}=\binom{n+1}{k+1}$$
  \notes
 
 \Tnote{n21}
-نقیض حکم سوال به نادرستی بیان شده است. فرض کنید P(x,y) هم‌رنگ بودن دو نقطه  x و y باشد. D(x,y) به فاصله d بودن دو نقطه  x و y باشد.\\
-حکم سوال بیان میکند که : 
+نقیض حکم سوال به نادرستی بیان شده است. فرض کنید P(x,y) هم‌رنگ بودن دو نقطه  x و y باشد. D(x,y) به فاصله d بودن دو نقطه  x و y باشد.
+
+حکم سوال بیان می‌کند که : 
 $ \exists x,y ( D(x,y) \wedge P(x,y)) $
-\\
-برای نقیض کردن آن داریم:\\
+
+
+برای نقیض کردن آن داریم:
+
 $$ \neg \exists x,y, ( D(x,y) \wedge P(x,y)) = \forall x,y, (\neg (D(x,y) \wedge P(x,y)) = \forall x,y, (\neg D(x,y) \vee \neg P(x,y)) $$
-\\
-به صورت فارسی می‌توان گفت : هیج دو نقطه به فاصله‌ی d هم‌رنگ نیستند.\\
+
+
+به صورت فارسی می‌توان گفت: هیج دو نقطه به فاصله‌ی d هم‌رنگ نیستند.
+
 در صورتی که جمله‌ی ٬وجود دارد دو نقطه به فاصله $d$ که دو رنگ مختلف باشند.٬ به شکل منطقی به صورت زیر نوشته می‌شود:
 $$ \exists x,y, (D(x,y) \wedge \neg P(x,y)) $$ 
-در گزاره‌های منطقی واضح است نقیض کردن اشتباه انجام شده است.\\
+در گزاره‌های منطقی واضح است نقیض کردن اشتباه انجام شده است.
+
 
 \Enote{n22}
-به‌ طور کلی در نظر داشته باشد، توجه به نگرش پایه‌ای و گام به گام منطق در تمامی حل سوالات (حتی مباحث غیرمنطق) به تمیزتر نوشتن و پرهیز از اشتباه کمک می‌کند. یه همین علت مهم و مورد انتظار است.\\
+به‌ طور کلی در نظر داشته باشد، توجه به نگرش پایه‌ای و گام به گام منطق در تمامی حل سوالات (حتی مباحث غیرمنطق) به تمیزتر نوشتن و پرهیز از اشتباه کمک می‌کند. یه همین علت مهم و مورد انتظار است.
+
 
  \solution*{پاسخ صحیح}
  
@@ -610,7 +665,8 @@ $$ \exists x,y, (D(x,y) \wedge \neg P(x,y)) $$
   %% question 3
   \question
 
-چگونگی اثبات درستی یا نادرستی جمله زیر را توضیح دهید.\\
+چگونگی اثبات درستی یا نادرستی جمله زیر را توضیح دهید.
+
  تابع q(x,y) را تعریف می‌کنیم اگر p(x) درست باشد p(x+y) و در غیر این صورت نقیض p(x-y) را نتیجه می‌دهد. 
   
  
@@ -619,7 +675,8 @@ $$ \exists x,y, (D(x,y) \wedge \neg P(x,y)) $$
  
  جمله بالا را به صورت یک گزاره منطقی می‌نویسیم.
   $$  (\forall x,p(x)) \rightarrow (\exists y, q(x,y)) $$
-  حال با یک مثال , نادرستی گزاره فوق را نشان می‌دهیم.\\
+  حال با یک مثال , نادرستی گزاره فوق را نشان می‌دهیم.
+  
  سمت چپ گزاره 
  $(\forall x,p(x))$
  را P
@@ -628,7 +685,8 @@ $ (\exists y, q(x,y)) $
 را Q می‌نامیم.
 پس داریم:
 $ P \rightarrow Q $
-\\
+
+
 $x_1$
 را در نظر می‌گیریم طوری که P درست باشد.
  سپس 
@@ -638,7 +696,8 @@ $ y_1 $
  P=True \rightarrow Q=False
 \end{align*}
 بنابراین طبق جدول truth-table
-گزاره فوق نادرست خواهد بود.\\
+گزاره فوق نادرست خواهد بود.
+
 
 
  \notes
@@ -681,7 +740,8 @@ $ x_1 $
  
  
   \Nnote {n24}
- از نوشتن جملات فارسی که ایجاد ابهام می‌کنند بپرهیزید و حتی‌الامکان عبارات را به صورت ریاضی بنویسید.\\
+ از نوشتن جملات فارسی که ایجاد ابهام می‌کنند بپرهیزید و حتی‌الامکان عبارات را به صورت ریاضی بنویسید.
+ \\
  از جمله بالا می‌توان 
  $ a_1 * a_2 * a_3 * ... * a_n + 1 $
  را تعبیر کرد در صورتی که مقصود 
@@ -727,7 +787,8 @@ $ x_1 $
     $\mathrm{a + b + ab}$
     به جای آن، مقدار
     $\mathrm{S}$
-    ثابت می‌ماند. حال به اثبات آن می‌پردازیم:\\
+    ثابت می‌ماند. حال به اثبات آن می‌پردازیم:
+    
     
       
     فرض می‌کنیم در مرحله‌‌ی اول دو عدد دلخواه
@@ -762,7 +823,7 @@ $ x_1 $
     تعریف شده است. در نهایت مقدار نهایی که براساس
     $\mathrm{{x}_i}$
     است، یک واحد از مقدار ناوردا کمتر خواهد بود.)
-    \\
+    
     
     
     %%%%%%%%%%%%%%%%%%%%%%%% question 2 %%%%%%%%%%%%%%%%%
@@ -774,7 +835,8 @@ $ x_1 $
     
     \solution
     خیر این حالت امکان‌پذیر نیست. چون لازم است تعداد اعداد تکرار شده در هر مرحله باهم متفاوت باشد و پس از گذر از چند مرحله این امکان از بین می‌رود.
-   \\
+   
+   
     \notes
     \Enote{n26}
     استدلال فوق شهودی است و شهود به هیچ عنوان ارزش ریاضی ندارد.
@@ -796,7 +858,7 @@ $ x_1 $
     
     \Tnote{n26.5}
     اشاره و اثبات نوع ناوردا ضروری است. نوع ناوردا می‌تواند ثابت یا افزایشی یا کاهشی باشد.
- \\   
+\\ 
      در این پاسخ نوع ناوردا غیر نزولی است زیرا اعداد در یک ستون از عدد دوم به بعد یا افزایش می‌یابند یا ثابت می‌مانند.
  \\   
      توجه کنید ممکن است در سوالاتی که ناوردای کاهشی یا افزایشی دارند تغییرات یک متغیر ناوردا باشد و نه مقدار آن. این موضوع را در پاسخ صحیح همین سوال مورد توجه قرار دهید.
@@ -826,9 +888,11 @@ $ x_1 $
     از طرفی کران گام نیز داریم. چون تعداد عدد صحیح می‌باشد، این کران یک خواهد بود. هم‌چنین چون مقدار ناوردای کاهشی داریم و همواره در طی گام‌ها
     مقدار ناوردای انتخابی کم می‌شود و کران پایین هم داریم (تعداد جملات در کمترین حالت ممکن می‌توانند صفر باشند)، بالاخره به نقطه‌ای خواهیم رسید
     که تعداد جملات متمایز یک خواهد بود و تمام جملات دنباله یکسان می‌شوند و از آن پس دیگر دنباله‌ی متمایز نخواهیم داشت. 
-    \\
+    
+    
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%% question 3 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 \question
+
 ثابت کنید ۱۰۰۰۰۰ عدد طبیعی متوالی می‌توان یافت که در بین آن‌ها دقیقا ۵ عدد اول وجود دارد.
 \solution
 
@@ -845,13 +909,13 @@ $ x_1 $
 \Enote{n35}
 لازم است که گام ناوردا ذکر و اثبات شود.
 \Enote{n36}
-اثبات حکم های اشاره شده ضروری است .
+اثبات حکم‌های اشاره شده ضروری است .
 \Enote{n37}
 لازم است به استفاده از پیوستگی گسسته در این اثبات اشاره شود.
 \solution*{پاسخ صحیح}
 
 اعداد ۱ تا ۱۰۰۰۰۰ را در نظر بگیرید, بین این اعداد حداقل ۶ عدد اول وجود دارد.(2,3,5,7,11,13)
-
+\\
  حال دنباله اعداد
 \[100000!, 100000!+1,100000!+2 ,..., 100000!+99999\]
 را در نظر بگیرید, این دنباله حداکثر ۱ عدد اول دارد. چون به ازای تمام ‭‭$i$ 
@@ -862,22 +926,26 @@ $100000!+1$
 است.
 
 
- حال از دنباله اولیه شروع می کنیم و در هر گام, کوچک‌ترین عدد دنباله را حذف کرده و عدد بعد از بزرگ‌ترین عدد را به آن اضافه می کنیم. در هر گام تعداد اعداد اول دنباله حداکثر یک واحد تغییر می‌کند. بنابراین چون در ابتدا دنباله بیش از ۵ عدد اول و در زمان رسیدن به دنباله دوم, حداکثر ۱ عدد اول دارد,طبق پیوستگی گسسته, دنباله‌ای در این گام‌ها وجود دارد که دقیقا ۵ عدد اول دارد.
+ حال از دنباله اولیه شروع می‌کنیم و در هر گام, کوچک‌ترین عدد دنباله را حذف کرده و عدد بعد از بزرگ‌ترین عدد را به آن اضافه می‌کنیم. در هر گام تعداد اعداد اول دنباله حداکثر یک واحد تغییر می‌کند. بنابراین چون در ابتدا دنباله بیش از ۵ عدد اول و در زمان رسیدن به دنباله دوم, حداکثر ۱ عدد اول دارد,طبق پیوستگی گسسته, دنباله‌ای در این گام‌ها وجود دارد که دقیقا ۵ عدد اول دارد.
+ 
+ 
 %%%%%%%%%%%%%%%%%%%%%%%%% question 4 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \question
+
 سه دسته سنگریزه داریم که به ترتیب شامل ۱۱، ۱۸۵ و ۱۸۹ سنگریزه هستند. در هر حرکت می‌توانیم دو دسته از سنگریزه‌ها را با هم ترکیب کرده و یا یک دسته که تعداد زوجی سنگریزه دارد را به دو دسته با تعداد سنگریزه‌های یکسان تقسیم کنیم. 
 آیا می‌توانیم در نهایت به ۳۸۵ دسته برسیم که هر کدام ۱ سنگریزه دارند؟
 \solution
 
-مشاهده می‌شود که برای این که به دسته های با یک سنگریزه برسیم, باید تعداد سنگریزه دسته‌ها مقسوم علیه مشترک بزرگتر از ۱ نداشته باشند زیرا مقسوم علیه مشترک در اینجا یک ناوردا است. در مورد این دسته‌ها هم این موضوع صدق می کند, 
-پس می توان این تقسیم را انجام داد.
+مشاهده می‌شود که برای این که به دسته‌های با یک سنگریزه برسیم, باید تعداد سنگریزه دسته‌ها مقسوم علیه مشترک بزرگتر از ۱ نداشته باشند زیرا مقسوم علیه مشترک در اینجا یک ناوردا است. در مورد این دسته‌ها هم این موضوع صدق می کند, 
+پس می‌توان این تقسیم را انجام داد.
 \notes
-\\
+
+
 \refnote{n25} 
 
 \Tnote{n37}
 نمی‌توان از برقرار بودن شرط لازم برای برقراری یک حکم, به درست بودن آن رسید.
-مثلا در این جواب, مقسوم علیه مشترک بیشتر از یک نداشتن دسته ها, شرط لازم برای برقراری حکم است اما کافی نیست, بنابرین نمی توان از آن برای اثبات درست بودن حکم استفاده کرد. 
+مثلا در این جواب, مقسوم علیه مشترک بیشتر از یک نداشتن دسته‌ها, شرط لازم برای برقراری حکم است اما کافی نیست, بنابرین نمی‌توان از آن برای اثبات درست بودن حکم استفاده کرد. 
 \solution
  برای شروع، از آن‌جایی که تعداد سنگ‌ها در تمامی دسته‌ها فرد است، فقط اجازه داریم که دو دسته را انتخاب کرده آن‌ها را با هم ترکیب کنیم.
     بر این اساس، سه حالت پیش می‌آید.
@@ -901,7 +969,8 @@ $100000!+1$
     $c$ یک عدد اول باشد
     ادعا می‌کنیم که اگر عدد اولی با چنین شرایطی یافت شود، با هر مرحله تقسیم و ترکیب دسته‌ها باز هم می‌تواند تعداد سنگ‌ریزه‌های موجود در هر دسته بشمارد.
     (این بدان معنی است که تعداد سنگ‌ریزه‌های موجود در هر دسته بر عدد اول پیدا شده بخش‌پذیر باشد.)
-    حال به اثبات ادعای خود می‌پردازیم:\\
+    حال به اثبات ادعای خود می‌پردازیم:
+    
     طبق نظریه‌ی اعداد، دو حالت زیر را به ازای عدد اول 
     $\mathrm{P|P>2}$
     برقرار است.
@@ -927,20 +996,26 @@ $100000!+1$
             if\;P|2c \to P|c \\ \nonumber
         \end{align}
     \end{enumerate}
-    مجددا تاکید شود که رابطه‌ی ۵ و ۶ به ازای عدد اول بزرگ‌تر از ۲ برقرار است.\\
+    
+    
+    مجددا تاکید شود که رابطه‌ی ۵ و ۶ به ازای عدد اول بزرگ‌تر از ۲ برقرار است.
+    
     بنابراین باقی‌مانده‌ی تعداد سنگ‌ریزه‌های هر دسته بر عددی مانند
     $c$
     با شرایط فوق، همواره صفر خواهد ماند و ثابت است.
     حال با توجه به این اثبات کافیست برای هر یکی از سه حالت بالا، عدد اولی بیابیم که هر دو دسته را بتواند بشمارد.
     در صورتی‌که چنین چیزی ممکن باشد، تعداد سنگ‌ریزه‌های موجود در هردسته در هریکی از حالات کران پایین خواهد داشت و به ازای هر گام، تعداد سنگ‌ریزه‌هایش همواره بزرگ‌تر مساوی آن کران خواهد بود؛
-    که این کران همان عدد اول پیدا شده است.\\
+    که این کران همان عدد اول پیدا شده است.
+    
     برای حالت اول، عدد ۱۱، در حالت دوم، عدد ۷ و در حالت سوم، عدد ۵، سه عدد اول بزرگ‌تر از ۲ هستند که می‌توانند تعداد سنگ‌ریزه‌های موجود در هردودسته را بشمارند.
     بدین ترتیب تعداد سنگ‌ریزه‌های موجود در هر دسته‌‌ی ایجاد شده هیچ‌گاه از عدد اول شمارنده‌ی آن کمتر نخواهد شد.
-    پس هیچ‌گاه نمی‌توانیم ۱۸۱ دسته سنگ‌ریزه داشته باشیم که هریک فقط یک سنگ‌ریزه داشته باشد.\\
+    پس هیچ‌گاه نمی‌توانیم ۱۸۱ دسته سنگ‌ریزه داشته باشیم که هریک فقط یک سنگ‌ریزه داشته باشد.
+    
+    
 
 \notes
 \Tnote{37}
-بالاتر ذکر شده بود که می خواهیم حکم را برای هر عدد دلخواه $c$ ثابت کنیم, اما جلوتر $c$ اول فرض شده و در نهایت هم برای $c>2$ اثبات شده است.
+بالاتر ذکر شده بود که می‌خواهیم حکم را برای هر عدد دلخواه $c$ ثابت کنیم, اما جلوتر $c$ اول فرض شده و در نهایت هم برای $c>2$ اثبات شده است.
 تغییر فرض اثبات در مراحل بعد صحیح نیست و باید از ابتدا درست ذکر شود, چون در این حالت حکم متفاوتی با آنچه در ابتدا بیان کردیم, اثبات شده است.
 \solution*{پاسخ صحیح}
 
@@ -956,7 +1031,7 @@ $100000!+1$
     \end{enumerate}
     
     مساله را با ناوردایی حل می‌کنیم.
-    اثبات می‌کنیم اگر عدد اول و فردی وجود داشته باشد که باقی‌مانده‌ی تقسیم تعداد سنگ‌ریزه ها در دسته‌های اولیه بر آن برابر صفر باشد، این باقی‌مانده در تمامی مراحل همچنان صفر خواهد ماند.
+    اثبات می‌کنیم اگر عدد اول و فردی وجود داشته باشد که باقی‌مانده‌ی تقسیم تعداد سنگ‌ریزه‌ها در دسته‌های اولیه بر آن برابر صفر باشد، این باقی‌مانده در تمامی مراحل همچنان صفر خواهد ماند.
     
    اثبات:
    
@@ -1002,6 +1077,6 @@ $100000!+1$
     
     برای حالت اول، عدد ۱۱، در حالت دوم، عدد ۷ و در حالت سوم، عدد ۵، سه عدد اول بزرگ‌تر از ۲ هستند که می‌توانند تعداد سنگ‌ریزه‌های موجود در هردودسته را بشمارند.
     بدین ترتیب تعداد سنگ‌ریزه‌های موجود در هر دسته‌‌ی ایجاد شده هیچ‌گاه از عدد اول شمارنده‌ی آن کمتر نخواهد شد.
-    پس هیچ‌گاه نمی‌توانیم ۱۸۱ دسته سنگ‌ریزه داشته باشیم که هریک فقط یک سنگ‌ریزه داشته باشد.\\
+    پس هیچ‌گاه نمی‌توانیم ۱۸۱ دسته سنگ‌ریزه داشته باشیم که هریک فقط یک سنگ‌ریزه داشته باشد.
 
 \end{document}
