--- a/h2wp.tex
+++ b/h2wp.tex
@@ -851,8 +851,8 @@ $ x_1 $
   
     
     \notes
-    
-    
+    \\%dont erase this :)
+    \\%dont erase this :)
     \refnote{n25}
     
     
@@ -939,8 +939,8 @@ $100000!+1$
 مشاهده می‌شود که برای این که به دسته‌های با یک سنگریزه برسیم, باید تعداد سنگریزه دسته‌ها مقسوم علیه مشترک بزرگتر از ۱ نداشته باشند زیرا مقسوم علیه مشترک در اینجا یک ناوردا است. در مورد این دسته‌ها هم این موضوع صدق می کند, 
 پس می‌توان این تقسیم را انجام داد.
 \notes
-
-
+\\%dont erase this :)
+\\%dont erase this :)
 \refnote{n25} 
 
 \Tnote{n37}
@@ -1078,5 +1078,170 @@ $100000!+1$
     برای حالت اول، عدد ۱۱، در حالت دوم، عدد ۷ و در حالت سوم، عدد ۵، سه عدد اول بزرگ‌تر از ۲ هستند که می‌توانند تعداد سنگ‌ریزه‌های موجود در هردودسته را بشمارند.
     بدین ترتیب تعداد سنگ‌ریزه‌های موجود در هر دسته‌‌ی ایجاد شده هیچ‌گاه از عدد اول شمارنده‌ی آن کمتر نخواهد شد.
     پس هیچ‌گاه نمی‌توانیم ۱۸۱ دسته سنگ‌ریزه داشته باشیم که هریک فقط یک سنگ‌ریزه داشته باشد.
+
+ \chapter*{استقرا}
+ \question
+ تساوی های زیر برقرار است:
+ 
+\[F(1,1)=2\]
+\[F(m+1,n)=F(m,n)+2(m+n)\]
+\[F(m,n+1)=F(m,n)+2(m+n-1)\]
+  ثابت کنید:
+  
+ \[F(m,n)=(m+n)^2-(m+n)-2n+2\]
+\solution
+حکم را با استقرا روی $m$
+و
+$n$
+ نشان می دهیم:
+
+پایه استقرا:
+\[F(1,1)=2\]
+
+فرض استقرا:
+\[F(m,n)=(m+n)^2-(m+n)-2n+2\]
+
+حکم استقرا:
+\[F(m+1,n+1)=(m+1+n+1)^2-(m+1+n+1)-2n\]
+
+اثبات:
+\[F(m+1,n+1)=F(m,n+1)+2(m+n+1)\]
+\[\rightarrow F(m+1,n+1)=F(m,n)+2(m+n-1)+2(m+n+1)\]
+\[\rightarrow F(m+1,n+1)=(m+n)^2-(m+n)-2n+2+4(m+n)\]
+\[\rightarrow F(m+1,n+1)=m^2+2mn+n^2-m-n-2n+2+4m+4n+4-4\]
+\[\rightarrow F(m+1,n+1)=(m^2+2+n^2+2mn+4m+4n)+(-m-n-2)-2n\]
+\[\rightarrow F(m+1,n+1)=(m+1+n+1)^2-(m+1+n+1)-2n\]
+
+  حکم اثبات شد.
+\notes
+\Enote{n39}
+استقرا باید تمام حالت ها را در بر بگیرد, اما در اینجا فقط حالت هایی اثبات شده که
+$m=n$
+\solution
+فرض کنید $n$ دلخواه باشد, حکم را با استقرا روی $m$ نشان می دهیم:
+
+پایه استقرا:
+\[F(1,1)=2\]
+
+فرض استقرا:
+\[F(m,n)=(m+n)^2-(m+n)-2n+2\]
+
+حکم استقرا:
+\[F(m+1,n)=(m+1+n)^2-(m+1+n)-2n+2\]
+
+اثبات:
+\[F(m+1,n)=F(m,n)+2(m+n)\]
+\[\rightarrow F(m+1,n)=(m+n)^2-(m+n)-2n+2+2(m+n)\]
+\[\rightarrow F(m+1,n)=m^2+2mn+n^2-m-n-2n+2+2m+2n+1-1\]
+\[\rightarrow F(m+1,n)=(m^2+1+n^2+2mn+2m+2n)+(-m-n-1)-2n+2\]
+\[\rightarrow F(m+1,n)=(m+1+n)^2-(m+1+n)-2n+2\]
+
+چون 
+$n$
+را دلخواه در نظر گرفته بودیم, به ازای تمام
+$m$
+و
+$n$
+  ها, حکم اثبات شد.
+\notes
+\Enote{n38}
+پایه استقرا باید با توضیح داده شده مطابقت داشته باشد, در این مثال, برای درست بودن اثبات, باید پایه 
+\[F(1,n)=(1+n)^2-(1+n)-2n+2\]
+در نظر گرفته می شد که خود نیازمند اثبات است.
+\\%dont erase this :)
+\\%dont erase this :)
+\refnote{n39}
+\solution*{پاسخ صحیح}
+حکم را با استقرا روی $m$
+و
+$n$
+ نشان می دهیم:
+
+پایه استقرا:
+\[F(1,1)=2\]
+
+فرض استقرا:
+\[F(m,n)=(m+n)^2-(m+n)-2n+2\]
+
+حکم استقرا:
+\[F(m+1,n)=(m+1+n)^2-(m+1+n)-2n+2\]
+\[F(m,n+1)=(m+n+1)^2-(m+n+1)-2n\]
+
+اثبات:
+\begin{enumerate}
+
+\item
+\[F(m+1,n)=F(m,n)+2(m+n)\]
+\[\rightarrow F(m+1,n)=(m+n)^2-(m+n)-2n+2+2(m+n)\]
+\[\rightarrow F(m+1,n)=m^2+2mn+n^2-m-n-2n+2+2m+2n+1-1\]
+\[\rightarrow F(m+1,n)=(m^2+1+n^2+2mn+2m+2n)+(-m-n-1)-2n+2\]
+\[\rightarrow F(m+1,n)=(m+1+n)^2-(m+1+n)-2n+2\]
+\item
+\[F(m,n+1)=F(m,n)+2(m+n-1)\]
+\[\rightarrow F(m+1,n)=(m+n)^2-(m+n)-2n+2+2(m+n-1)\]
+\[\rightarrow F(m+1,n)=m^2+2mn+n^2-m-n-2n+2m+2n+1-1\]
+\[\rightarrow F(m+1,n)=(m^2+1+n^2+2mn+2m+2n)+(-m-n-1)-2n\]
+\[\rightarrow F(m+1,n)=(m+1+n)^2-(m+1+n)-2n\]
+\end{enumerate}
+
+  حکم اثبات شد.
+ \question
+به یک گراف کامل جهت‌دار تورنمنت می‌گوییم، یک راس را شاه می‌نامیم اگر بتوان آن راس با مسیر‌هایی حداکثر به طول ۲ به بقیه رئوس گراف رسید. نشان دهید به ازای همه 
+    $n$ ها به جز ۲ و ۴ تورنمنتی 
+    $-n$ راسی داریم که همه رئوس در آن شاه هستند.    
+\solution
+   {\hspace*{5cm}\includegraphics[height=5cm]{Graph1.jpg}}    
+   
+ 
+   . $G_{n}$ را از روی 
+    $G_{n-1}$ می‌سازیم به این صورت که  $G_{n-1}$ را جفت جفت افراز کرده و اتصال هر جفت با راس جدید را جداگانه بررسی می‌کنیم. جفت راس $i, j$ را در نظر بگیرید که در آن یال $i, j$ از سمت یال $i$ به سمت 
+    $j$
+     باشد، حال 
+     (بدون کم شدن از کلیت مسئله)
+      راس جدید
+     $x$
+      را به این صورت به مجموعه اضافه می‌کنیم:
+    
+       {\hspace*{6cm}\includegraphics[height=2cm]{Graph2.jpg}}    
+       
+    تمام مسیر‌های
+    $xj, xi, jx, ix, ij$ به طول حداکثر ۲ موجودند، این کار را برای تمام جفت راس‌ها انجام می‌دهیم. بنابراین تمام مسیر‌ها به طول حداکثر ۲ موجودند، راس $x$ به تمام راس‌ها یال دارد، پس به گراف دلخواه $G_{n}$ رسیدیم.
+    
+\notes
+\Enote {n40}
+ناقص بودن گام استقرا:
+این گام در صورتی صحیح است که $n$ فرد باشد.
+و با توجه به وابستگی اثبات $n$ های فرد به صحیح بودن حکم برای $n$ های زوج, حکم اثبات نمی شود.
+\solution*{پاسخ صحیح}
+   {\hspace*{5cm}\includegraphics[height=5cm]{Graph1.jpg}}    
+   
+   برای $n>6$ ما دو حالت داریم: $\; \; \; \; \; \;$ حالت اول $n$ زوج
+   .$\; \; \; \; \; \;$
+   حالت دوم $n$ فرد.   
+   
+    الف ) $n$ فرد می‌باشد. پس
+    $G_{n-1}$ تعداد زوجی راس دارد. $G_{n}$ را از روی 
+    $G_{n-1}$ می‌سازیم به این صورت که  $G_{n-1}$ را جفت جفت افراز کرده و اتصال هر جفت با راس جدید را جداگانه بررسی می‌کنیم. جفت راس $i, j$ را در نظر بگیرید که در آن یال $i, j$ از سمت یال $i$ به سمت
+     $j$   باشد، حال 
+     (بدون کم شدن از کلیت مسئله)
+      راس جدید
+     $x$
+      را به این صورت به مجموعه اضافه می‌کنیم:
+
+    
+       {\hspace*{6cm}\includegraphics[height=2cm]{Graph2.jpg}}    
+       
+    تمام مسیر‌های
+    $xj, xi, jx, ix, ij$ به طول حداکثر ۲ موجودند، این کار را برای تمام جفت راس‌ها انجام می‌دهیم. بنابراین تمام مسیر‌ها به طول حداکثر ۲ موجودند، راس $x$ به تمام راس‌ها یال دارد، پس به گراف دلخواه $G_{n}$ رسیدیم.
+    
+    ب) $n$ زوج باشد. در این حالت $G_{n}$ را از $G_{n-2}$ می‌سازیم. دو راس جدید $x, y$ را بهم متصل می‌کنیم(از $x$ به سمت $y$) حال به ازای هر راس $i$ در $G_{n-2}$ آن را به این صورت به $x$ به $y$ متصل می‌کنیم.
+    
+        {\hspace*{6cm}\includegraphics[height=2cm]{Graph3.jpg}}      
+    
+    تمامی مسیر‌های $iy, ix, yx, yi, xi, xy$ به طول حداکثر ۲ موجود هستند چون این کار را برای تمام راس‌های $G_{n-2}$ انجام دادیم پس تمام مسیرها به طول حداکثر ۲ موجودند و راس‌ها جدید $y, x$ به تمام راس‌ها یال دارند، پس گراف دلخواه $G_{n}$ را ساختیم.
+    
+    چون هم برای $n$های زوج ثابت کردیم و هم برای $n$های زوج ثابت کردیم و پس برای $n$های فرد، پس می‌توان $G_{n}$ را به ازای تمام 
+    $n>6$ ساخت.
+
 
 \end{document}
