--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1243,5 +1243,94 @@ $n$
     چون هم برای $n$های زوج ثابت کردیم و هم برای $n$های زوج ثابت کردیم و پس برای $n$های فرد، پس می‌توان $G_{n}$ را به ازای تمام 
     $n>6$ ساخت.
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% question 4.3 %%%%%%%%%%%%%%%%%%%%%%%%%%%
+\question
+
+ نشان بدهید که میتوان اعداد $1,2,3,...,n$ را طوری کنار هم چید، که میانگین هیچ دو عددی بین آن دو عدد دیده نشود. 
+ 
+ \solution
+ برای $ n= 1 , 2$
+ به طور بدیهی می‌توان به آرایش خاص در صورت سوال رسید. 
+ $ n = 2 \rightarrow { 1, 2} $
+ برای n های بزرگ‌تر از ۲، عددها را به دو دسته زوج و فرد تقسیم می‌کنیم و اعداد را مانند الگوریتم زیر می‌چینیم.
+ 
+ برای $ n=3 $ ابتدا اعداد فرد را در سمت چپ و سپس تنها عدد زوج را می‌نویسیم. 
+ $ { 1, 3 ,2 } $
+ دو عدد فرد را مانند حالت $ n =2 $ می‌نویسیم.
+ $ n=2 \rightarrow { 1 ,2 } \rightarrow { 1 ,3 } $
+  
+ مثالا برای $ n =4 $ نیز، دو دسته زوج و فرد را تشکیل و مانند $ n =2 $ ، سمت چپ و راست، زوج و فردها را می‌نویسیم.
+ 
+ برای $ n = 5$  نیز دو دسته زوج و فرد را به ترتیب با ۲ و ۳ عضو تشکیل می‌دهیم و دسته فرد را سمت چپ و زوج‌ها را سمت راست قرار می‌دهیم.‌
+ چون می‌دانیم که میانگین عددی زوج و فرد، عددی غیرصحیح می‌شود پس بین دو دسته زوج‌ها و فردها تداخلی نخواهیم داشت.
+ 
+ 
+ \notes
+ 
+ \refnote{n14}
+ 
+ مثال زدن و تعمیم دادن آن اثبات محسوب نمی‌شود.
+ 
+ \Tnote{n41}
+ توضیحات داده شده فقط برای پایه‌ها است و ‌ذکر فرض و حکم استقرا ضروری است.
+ 
+ 
+ \solution*{پاسخ صحیح} 
+ 
+ پایه استقرا :$ n = 2 $  برقرار است.
+ 
+ چینش: 2 1
+ 
+ سوال را با دو گام حل می‌کنیم:
+ 
+ آ) گام اول: $ n  \rightarrow  2n $
+ 
+ ب) گام دوم: $ n \rightarrow n-1 $
+ 
+ برای گام اول از مجموعه‌ای استفاده می‌کنیم که در آن $ n = 2^k $ باشد:
+ 
+ فرض استقرا: $ n = 2^k $ 
+ 
+ حکم استقرا: $n = 2 ^ { k+1 } $ 
+ 
+ 
+اثبات: مجموعه‌ی حکم را به دو قسمت زوج‌ها و فردها تقسیم می‌کنیم.
+	\begin{enumerate}
+		\item
+برای زوج‌ها هر عدد را بر دو تقسیم می‌کنیم. به مجموعه‌ی فرض می‌رسیم که شرایط مسئله در آن برقرار است و جایگشتی از اعضا را دارد که در آن چینش میانگین هیچ دو عضوی بینشان نیست. حال
+ هر عضو از مجموعه را در دو ضرب می‌کنیم.
+  $n \rightarrow 2n$
+
+ 		\item
+
+برای فردها هر عدد را به علاوه یک و سپس بر دو تقسیم می‌کنیم. به مجموعه‌ی فرض می‌رسیم که شرایط مسئله در آن برقرار است و جایگشتی از اعضا را دارد که در آن چینش میانگین هیچ دو عضوی بینشان نیست.  حال
+ هر عضو از مجموعه را در دو ضرب  و منهای یک می‌کنیم.
+$n \rightarrow 2n-1$  
+ 	\end{enumerate}
+ 	
+ 	
+ 	
+ادعا می‌کنیم مجموعه‌ی حاصل مجموعه‌ی جواب است، هر دو عددی که از مجموعه‌ی زوج‌ها انتخاب کنیم ،میانگینشان هم فقط در دو ضرب شده است و در نتیجه بین آن دو نخواهد بود.
+
+
+هر دو عددی که از مجموعه فردها انتخاب کنیم، میانگنشان در دو ضرب و منهای یک شده است و بنا به فرض بین آن دو نخواهد بود.
+و اگر عددی از فردها و عددی از زوج‌ها را انتخاب کنیم، میانگینشان طبیعی نخواهد بود و جزو شرایط مسئله نیست.
+همه‌ی حالت‌ها را بررسی کردیم، پس ادعا صحیح و حکم ثابت می‌شود.
+
+
+در صورتی که $n$ توانی از دو نبود، کوچک‌ترین عدد توان دو بزرگ‌تر از $n$ را به عنوان $n$ در نظر می‌گیریم  و در هنگام چینش اعداد بزرگ‌تر از $n$  را حذف می‌کنیم و چون با حذف یک عضو شرایط مسئله برقرار می‌ماند، حکم ثابت می‌شود.
+
+
+ 	\notes
+ 	
+ 	\Tnote{n42}
+ 	به این گونه سوالات که یک گام بزرگ (گام آ) دارد و یک گام معکوسی (گام ب) که کم می‌کند استقرای قهقرایی می‌گویند. در این سوالات حکم را با گام بزرگ اثبات می‌کنیم و با استفاده از گام کوچک از آن کم می‌کنیم تا همه اعداد را پوشش دهیم.
+ 	
+\Tnote{n43}
+ 	 توجه کنید در اثبات‌ها باید با استفاده از گام(ها) و فرض ، حکم را برای همه اعداد طبیعی ثابت کنید.
+ 	 
+ \Enote{n44}
+ در استقرا توصیه اکید داریم که از استقرای رو به پایین استفاده کنید، یعنی از حکم استقرا به فرض استقرا برسید. در غیر این صورت باید به تمام شرایط رسیدن فرض به حکم و استفاده از سورها توجه کامل داشت.
+ 
 
 \end{document}
